--- a/master/cookies/oneflow2onnnx.html
+++ b/master/cookies/oneflow2onnnx.html
@@ -969,10 +969,10 @@
 <p>opset: 指定转换模型的版本 (int，默认为 <code>oneflow_onnx.constants.PREFERRED_OPSET</code>)</p>
 </li>
 <li>
-<p>flow_weight_dir: OneFlow模型权重的保存路径</p>
+<p>flow_weight_dir: OneFlow 模型权重的保存路径</p>
 </li>
 <li>
-<p>onnx_model_path: 导出的 ONNX 模型保存路径。用户需要调用 <code>check_point.save(flow_weight_dir)</code>，等待OneFlow模型权重保存完成</p>
+<p>onnx_model_path: 导出的 ONNX 模型保存路径</p>
 </li>
 <li>
 <p>dynamic_batch_size: 导出的 ONNX 模型是否支持动态 batch，默认为False</p>
